[package]
name = "Stock-Market-Moniter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "2.1.0"
tokio = { version = "1.36.0", features = ["full"] }
time = "0.3.34"
chrono = "0.4"
plotters = "0.3"
ta = "0.4.0"